<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Profile.ProfilePicActivity">


    <TextView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="18sp"
        android:text="@string/skip"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textprofpic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/setyourprofilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/blankprofilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textprofpic" />
    <TextView
        android:id="@+id/uploadpictext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:text="@string/uploadpic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadpictext">

        <TextView
            android:id="@+id/gallary"
            android:layout_weight="1"
            android:text="@string/fromgallary"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/background_square"
            android:textColor="@color/colorred"
            android:textAllCaps="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/camera"
            android:layout_weight="1"
            android:text="@string/takeaphoto"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorred"
            android:background="@drawable/background_square"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnnext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorred"
        android:elevation="10dp"
        android:text="Next"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>