<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.CreatepasswordActivity">
    <include layout="@layout/customtoolbar"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"

        android:textColorHint="@color/colorblack"

        app:passwordToggleTint="@color/colorPrimary"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_password"
            android:textSize="14sp"

            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputconpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmpassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_conpassword"
            android:textSize="14sp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinput_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteremail"
        android:textColorHint="@color/colorblack"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:textSize="14sp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
<TextView
    android:layout_marginTop="10dp"
    android:textColor="@color/colorblack"
    android:textSize="14sp"
    android:text="Choose Language"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

</TextView>
    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/chooselanguage"
        android:orientation="horizontal"
        android:checkedButton="@+id/sound" >

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/engishlanguage"
            android:text="English" />

        <RadioButton
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/germanlanguage"
            android:text="German" />

    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <CheckBox
            android:id="@+id/chk_update"
            android:layout_width="wrap_content"
            android:paddingLeft="2dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/update"
            android:layout_toRightOf="@+id/chk_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/accepttermcon"
            android:textSize="15sp"
            android:textColor="@color/colorblack"

            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <CheckBox
            android:id="@+id/chk_termcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/termcon"
            android:layout_toRightOf="@+id/chk_termcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="2dp"
            android:textSize="17sp"
            android:textColor="@color/colorblack"
            />


    </RelativeLayout>



    <Button

        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorred"
        android:textColor="@color/colorWhite"
        android:text="@string/next"
        android:padding="12dp"
        android:textAllCaps="true"
        />
</LinearLayout>
</LinearLayout>